<resources>
    <string name="app_name">eReceipt</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="underlined_sign_up"><u>Sign Up</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="log_out">Log Out</string>
    <string name="email_hint">jhonsmith@domain.com</string>
    <string name="welcome">Welcome to eReceipt</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price (0.00)</string>
    <string name="product_amount">Amount (0)</string>
    <string name="add">Add</string>
    <string name="buyer_nif">Buyer NIF</string>
    <string name="taxes_percent">Taxes (%)</string>
    <string name="products">Products</string>
    <string name="create">Create</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="euro">€</string>
    <string name="amountX">x</string>
    <string name="nif">NIF</string>
    <string name="phone_number">Phone number</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="company_nif">NIF: </string>
    <string name="company_phone">Phone: </string>
    <string name="company_email">Email: </string>
    <string name="company_address">Address: </string>
    <string name="company_postal_code">Postal Code: </string>
    <string name="company_city">City: </string>
    <string name="company_country">Country: </string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="delete">Delete</string>
</resources>