<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/product_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_amount"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/product_amount"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/add_item"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintWidth_percent="0.5"

        />




</androidx.constraintlayout.widget.ConstraintLayout>