<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_container"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/address"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postal_code_container"
        android:layout_marginHorizontal="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/address_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/city_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postal_code_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="number"
            android:hint="@string/postal_code"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_container"
        android:layout_marginHorizontal="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/address_container"
        app:layout_constraintStart_toEndOf="@id/postal_code_container"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/city"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_container"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/postal_code_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/country"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/country_container"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/country_container"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>