<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bottom_menu"
        app:layout_constraintWidth_percent="0.90"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toTopOf="@id/menu"
        app:layout_constraintVertical_bias="0.25"
        />

    <ImageView
        android:id="@+id/to_sign_up"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toTopOf="@id/menu"
        app:layout_constraintVertical_bias="0.10"
        />
    <ImageView
        android:id="@+id/to_log_in"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="@id/to_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toTopOf="@id/menu"
        app:layout_constraintVertical_bias="0.10"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/to_sign_up"
        app:layout_constraintBottom_toBottomOf="@id/to_sign_up"
        app:layout_constraintStart_toEndOf="@id/to_log_in"
        app:layout_constraintEnd_toEndOf="@id/to_sign_up"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/to_log_in"
        app:layout_constraintBottom_toBottomOf="@id/to_log_in"
        app:layout_constraintStart_toStartOf="@id/to_log_in"
        app:layout_constraintEnd_toEndOf="@id/to_log_in"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_marginHorizontal="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:helperTextTextColor="@color/error"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.35">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_marginHorizontal="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error"
        android:paddingBottom="10dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_container"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textPassword"
            android:hint="@string/password"
            />
    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>